# t-udeepsc

./: pyproject.toml
UDeepSC/: model.py  udeepsc_main.py  utils.py
UDeepSC/msa_utils/: MSA.py
UDeepSC/vqa_utils/: ans_punct.py  vqaEval.py
