[project]
name = "t-udeepsc"
version = "0.1.0"
description = "Implementation of the paper 'A Unified Multi-Task Semantic Communication System for Multimodal Data'"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.2",
    "loguru>=0.7.3",
    "nltk>=3.9.4",
    "pandas>=3.0.2",
    "pytorch-msssim>=1.0.0",
    "pytorch-transformers>=1.2.0",
    "pytreebank>=0.2.7",
    "scikit-learn>=1.8.0",
    "thop>=0.1.1.post2209072238",
    "timm==0.4.12",
    "torch>=2.11.0",
    "transformers>=5.5.0",
]
